@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.685 2008-06-27 16:23:08 mh Exp $
+# $Id: CHANGES,v 1.686 2008-06-30 15:05:08 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.0 beta4 (2008/07/??)
+ - (2008/06/30) Implemented options to search update-, response- and solution
+    escalation time in TicketSearch().
  - (2008/06/27) Fixed bug# 2960 - DBUpdate-to-2.3.pl script fails.
  - (2008/06/26) Fixed bug# 3036 - Missing link delete checkboxes.
  - (2008/06/26) Fixed bug# 3029 - Search result of linkable objects is not
